--- a/test.html
+++ b/test.html
@@ -8,7 +8,35 @@
 </head>
 <body>
     <h1>hello</h1>
-<script src="./thirteen.js">
+    <!-- <script>
+    // let match = /[a-z]+/;
+ let alphabet = "アイウエオァィゥェォカキクケコサaシスセソタチツッテトナニヌネノハヒフヘホマミムメモヤャユュヨョラリルレロワヲンー";
+ let abc = alphabet.split('');
+ console.log(abc);
+    let matcher = new RegExp("["+alphabet+"]+");
+    console.log(matcher);
+    let sentence = "aカeタbカd+zナ";
+    let sent = sentence.split('');
+    for (let i = 0 ; i<sent.length;i++){
+        if(matcher.exec(sent[i])){
+            console.log(sent[i]+ " is valid");
+        }
+        else{
+            console.log(sent[i]+ " is not valid");
+        }
+    }
+    let c = 'code.w/ar s%';
+    let d = c.split('');
+    for(let i = 0; i<d.length;i++){
+        if(match.exec(d[i])){
+            console.log(d[i]+ " is valid");
+        }
+        else{
+            console.log(d[i] + "is not valid");
+        }
+    }
+    </script> -->
+<script src="./cypher.js">
 
 </script>
 </body>
